Small fixes for top menu and footer is aligned to bottom

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -55,6 +55,7 @@
 
 #fksis-top-nav {
   border-top: 1px solid #25a78f;
+  position: relative;
   font-family: Verdana, Arial, Tahoma, sans-serif;
   background: #7db9e8; /* Old browsers */
   background: -moz-linear-gradient(top, #7db9e8 0%, #04846c 0%, #026757 100%); /* FF3.6-15 */
@@ -64,6 +65,15 @@
 
   .navbar {
     padding: 0;
+    z-index: 10;
+  }
+
+  .line-border {
+    border-top: 2px solid #036352;
+    position: absolute;
+    bottom: 0;
+    z-index: 5;
+    width: 100%;
   }
 
   #fksis-top-nav-menu {
@@ -108,7 +118,7 @@
     }
 
     li > a {
-      padding: 17px 10px;
+      padding: 17px 10px 20px;
     }
 
     li:hover {
@@ -148,7 +158,6 @@
 #fksis-slider {
   background: left top url(' ../images/slider-bg.jpg') repeat-x;
   padding-top: 20px;
-  border-top: 1px solid #036352;
   border-bottom: 1px solid #e4e4e4;
 
   #fksis-slider-content {
